objects/Partner_Business_Terms_Category__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value Added Reseller (VAR)</fullName>
                </value>
                <value>
                    <fullName>Specialized Reseller</fullName>
                </value>
                <value>
                    <fullName>Cloud Partner</fullName>
                </value>
                <value>
                    <fullName>Subcontractor to Genesys</fullName>
                </value>
                <value>
                    <fullName>Services Partner Who Offers Own Services</fullName>
                </value>
                <value>
                    <fullName>Managed Service Provider (MSP)</fullName>
                </value>
                <value>
                    <fullName>Technology Partner</fullName>
                </value>
                <value>
                    <fullName>OEM Partner (outbound)</fullName>
                </value>
                <value>
                    <fullName>Cloud Referral Partner</fullName>
                </value>
                <value>
                    <fullName>Contract Reseller</fullName>
                </value>
                <value>
                    <fullName>Global Strategic Alliance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Business_Terms_and_Conditions__c</fullName>
        <label>Partner Business Terms and Conditions</label>
        <referenceTo>Partner_Business_Terms_and_Conditions__c</referenceTo>
        <relationshipLabel>Partner Business Term Categories</relationshipLabel>
        <relationshipName>Partner_Business_Term_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner_Contact__c</fullName>
        <label>Partner Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solutions__c</fullName>
        <label>Solutions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>MSP</fullName>
                </value>
                <value>
                    <fullName>Specialized VAR specialization</fullName>
                </value>
                <value>
                    <fullName>Suite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze</fullName>
                    <default>true</default>
                    <label>Bronze</label>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Partner Business Terms Category</label>
    <listViews>
        <fullName>Partner_Biz_Terms_Check_051718</fullName>
        <columns>NAME</columns>
        <columns>Tier__c</columns>
        <columns>Partner_Business_Terms_and_Conditions__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2018 12:00 AM</value>
        </filters>
        <label>Partner Biz Terms Check 051718</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PBT-{0000000}</displayFormat>
        <label>Partner Business Term Category</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Business Term Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>